country flag character code off center fix

--- a/src/styles.css
+++ b/src/styles.css
@@ -169,6 +169,8 @@ body::-webkit-scrollbar-thumb {
   & .country {
     font-size: 3rem;
     padding-top: 2rem;
+    position: relative;
+    bottom: 9px;
   }
 
   & .phone {
